--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -552,6 +552,9 @@
     <string name="display_rotation_180_title">180 degrees</string>
     <string name="display_rotation_270_title">270 degrees</string>
 
+    <!-- Device Hostname -->
+    <string name="device_hostname">Device hostname</string>
+
     <!-- Density Changer -->
     <string name="dpi">DPI</string>
     <string name="su_dialog_error_title">Warning</string>
