Backport Launch SuperSU from Settings
If SuperSU is installed, show an entry in Settings below
"Developer options", which launches SuperSU when tapped.
At boot time SuperSU will detect if com.android.settings
contains the resources from this patch, and if so it
will hide itself from the launcher. This was implemented
in v1.85, so we only show the entry if the installed
SuperSU version is at least that.

Tesla:
Added themeable vector drawable (creds: Branden M.)

Change-Id: I1796d92458587b9e961d5d8e6d58099e8367834d

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -19,4 +19,7 @@
     <string name="build_date">Build date</string>
     <string name="build_date_default">Unknown</string>
 
+    <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="supersu_title">SuperSU</string>
+
 </resources>
