[3/3] Add "Accept all files" option for incoming files via BT
 * Adapted for DU-M.
 * PS2: empty line fix
 * PS3: variable name fix

  BT server in AOSP will check MIME type of incoming file. Only those with
explicitly allowed types will be accepted. The MIME type whitelist is in
packages/apps/Bluetooth/src/com/android/bluetooth/opp/Constants.java
  But this can be annoying when we want to transfer RAR, APK or conf files
etc which do not exist in the list.
  This patch adds the option "Accept all files" in
          Settings -> Bluetooth -> menu.
  This option is disabled by default, which ensures security.

Change-Id: Idd2c438b4d0c0c6392e572e67b3ee9e8f9625282

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -425,4 +425,7 @@
     <string name="status_bar_custom_header_title">Time Contextual Header</string>
     <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
 
+    <!-- Bluetooth settings. A checkbox to set if we should accept all the file types regardless of their presence in MIME type whitelist -->
+    <string name="bluetooth_accept_all_files">Accept all file types</string>
+
 </resources>
