Add ability to change the color in battery saver mode [2/2]
Change-Id: I845e9dddc07cbfde0fbc67123a9aee181dcf2e31

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -497,7 +497,7 @@
 
     <!-- OmniSwitch -->
     <string name="omniswitch_category">OmniSwitch</string>
-    <string name="recents_use_omniswitch_title">Use for recents</string>
+    <string name="recents_use_omniswitch_title">Use OmniSwitch for recents</string>
     <string name="recents_use_omniswitch_summary">Use OmniSwitch instead of default recents view</string>
     <string name="omniswitch_start_settings_title">Settings</string>
     <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
@@ -644,5 +644,9 @@
     <string name="select_custom_app_title">Select custom app</string>
     <string name="select_custom_activity_title">Select custom activity</string>
     <string name="profile_applist_title">Applications</string>
+
+    <!-- Battery saver color -->
+    <string name="battery_saver_title">Warning color</string>
+    <string name="battery_saver_style_reset_message">Reset battery saver warning color?</string>
 
 </resources>
