[2/2] Settings: allow unlinking ringer with notification volume
ring volume drawable from InCallUI
inspired from CM

PS3: checkbox to switchpref

patchset: line length

Change-Id: Ifab81a652d611207b0c30d5b56a4f782eea55a5a
Signed-off-by: martinusbe <martinusbe@gmail.com>

Conflicts:
	res/values/slim_strings.xml
	src/com/android/settings/notification/NotificationSettings.java

Conflicts:
	res/values/custom_strings.xml

Conflicts:
	res/values/tesla_strings.xml

Conflicts:
	res/values/tipsy_strings.xml

Conflicts:
	res/values/tesla_strings.xml

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -788,4 +788,8 @@
    <string name="lockscreen_wallpaper_clear_title">Return to default</string>
    <string name="reset_lockscreen_wallpaper">Lockscreen wallpaper set back to default</string>
 
+    <!-- Linked / unlinked notification volume -->
+    <string name="link_volume_option_title">Link ring and notification volumes</string>
+    <string name="notification_volume_option_title">Notification volume</string>
+
 </resources>
