--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -30,6 +30,16 @@
 
     <!-- TeslaOTA -->
     <string name="slimota_title">Tesla Updates</string>
+    
+    <!-- Color Picker -->
+    <string name="dialog_color_picker">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="arrow_right">→</string>
+    <string name="arrow_down">↓</string>
+    <string name="hex">Hex:</string>
+    <string name="hex_hint">#ff000000</string>
+    <string name="set">Set</string>
+    <string name="color_default">Default</string>
 
     <!-- Clock and date -->
     <string name="clock_styles_title">Clock and date</string>  
