Lights with Screen On [2/2]
Implement a setting allowing lights to be activated
for new notifications even if the screen is on.

Lights with screen on and Custom values are separated
in an advanced section for a cleaner overview.

This setting gives the user an oportunity to activate lights
with the screen on and also during DayDream screensaver.
The option is not activated by default.

Change-Id: I3650a014554ce50eb9030cc41e5ce1780bcc2dfe

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -122,6 +122,9 @@
     <string name="custom_time">Custom</string>
     <string name="dialog_delete_title">Delete</string>
     <string name="dialog_delete_message">Remove selected item?</string>
+    <string name="profiles_add">Add</string>
+    <string name="profile_choose_app">Choose app</string>
+    <string name="profile_reset_title">Reset</string>
 
     <!-- Values for the notification light pulse spinners -->
     <string name="pulse_length_always_on">Always on</string>
@@ -153,8 +156,7 @@
     <string name="notification_light_default_value">Default</string>
     <string name="notification_light_missed_call_title">Missed call</string>
     <string name="notification_light_voicemail_title">Voicemail</string>
-    <string name="led_notification_title">Light settings</string>
-    <string name="led_notification_text">LED light enabled by settings</string>
+    <string name="notification_light_screen_on">Lights with screen on</string>
 
     <string name="profiles_add">Add</string>
     <string name="profile_choose_app">Choose app</string>
@@ -227,7 +229,7 @@
     <string name="changelog_tesla_title">Changelog</string>
     <string name="changelog_tesla_error">Unable to load changelog</string>
     
-    <!-- About Broken -->
+    <!-- About Tesla -->
     <string name="tesla_menu_about">About Tesla</string>
 
 </resources>
