--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -487,6 +487,10 @@
     <string name="interruptions_ignore_while_media_title">Prevent audio ducking</string>
     <string name="interruptions_ignore_while_media_summary">Do not reduce media playback volume when a notification arrives</string>
 
+    <string name="equalizer_settings_title">Equalizer</string>
+
+    <string name="kernel_settings_title">Kernel</string>
+
     <!-- QuickSettings haptic feedback -->
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching tiles</string>
