--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -150,6 +150,8 @@
     <string name="notification_light_default_value">Default</string>
     <string name="notification_light_missed_call_title">Missed call</string>
     <string name="notification_light_voicemail_title">Voicemail</string>
+    <string name="led_notification_title">Light settings</string>
+    <string name="led_notification_text">LED light enabled by settings</string>
 
     <string name="profiles_add">Add</string>
     <string name="profile_choose_app">Choose app</string>
