--- a/res/xml/navigation_settings.xml
+++ b/res/xml/navigation_settings.xml
@@ -10,6 +10,12 @@
             android:title="@string/navigation_bar_buttons" />
 
         <com.android.settings.tesla.SystemSettingSwitchPreference
+             android:key="navigation_bar_menu_arrow_keys"
+             android:title="@string/navigation_bar_arrow_keys_title"
+             android:summary="@string/navigation_bar_arrow_keys_summary"
+             android:defaultValue="false" />
+
+        <com.android.settings.tesla.SystemSettingSwitchPreference
             android:key="navigation_bar_show"
             android:title="@string/navbar_enable_bar"
             android:defaultValue="true" />
