--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -555,6 +555,10 @@
     <!-- Device Hostname -->
     <string name="device_hostname">Device hostname</string>
 
+    <!-- USB debugging notification -->
+    <string name="adb_notify">USB debugging notify</string>
+    <string name="adb_notify_summary">Display a notification when USB debugging is connected</string>
+
     <!-- Android debugging over WiFi -->
     <string name="adb_over_network">ADB over network</string>
     <string name="adb_over_network_summary">Enable TCP/IP debugging over network interfaces (Wi-Fi, USB networks). This setting is reset on reboot</string>
