--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -555,6 +555,12 @@
     <!-- Device Hostname -->
     <string name="device_hostname">Device hostname</string>
 
+    <!-- Android debugging over WiFi -->
+    <string name="adb_over_network">ADB over network</string>
+    <string name="adb_over_network_summary">Enable TCP/IP debugging over network interfaces (Wi-Fi, USB networks). This setting is reset on reboot</string>
+    <!-- Warning for Adb over Network -->
+    <string name="adb_over_network_warning">WARNING: When ADB over network is enabled, your phone is open for intrusions on all connected networks, including GSM data network!\n\nOnly use this feature when you are connected on trusted networks.\n\nDo you really want to enable this function?</string>
+
     <!-- Density Changer -->
     <string name="dpi">DPI</string>
     <string name="su_dialog_error_title">Warning</string>
