Add lockscreen rotation as an optional rotation setting [2/2]
Change-Id: Ie3057d353a1e36650d7afff2e550ac9795988ee3

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -649,4 +649,7 @@
     <string name="battery_saver_title">Warning color</string>
     <string name="battery_saver_style_reset_message">Reset battery saver warning color?</string>
 
+    <!-- Lock screen rotation -->
+    <string name="display_lockscreen_rotation_title">Lock screen</string>
+
 </resources>
