--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -98,7 +98,13 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/baseband_version"
                 android:summary="@string/device_info_default"/>
-
+                
+        <!-- Tesla firmware version -->
+        <Preference android:key="tesla_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/tesla_version_title"
+                android:summary="@string/tesla_version_default"/>
+                
         <!-- Device Kernel version -->
         <Preference android:key="kernel_version"
                 style="?android:preferenceInformationStyle"
