Add Layers app on dashboard when installed

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -32,4 +32,7 @@
     <string name="uber_flags">Build Flags</string>
     <string name="uber_flags_default">None</string>
 
+    <!-- BitSyko Layers  -->
+    <string name="bitsyko_layers">Layers</string>
+
 </resources>
