--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -72,6 +72,13 @@
 
     </dashboard-category>
 
+        <dashboard-tile
+                android:id="@+id/button_settings"
+                android:title="@string/button_pref_title"
+                android:fragment="com.android.settings.ButtonSettings"
+                android:icon="@drawable/ic_settings_home"
+                />
+
 	<!-- Layers -->
         <dashboard-tile
                 android:id="@+id/bitsyko_layers"
