--- a/res/xml/dashboard_categories.xml
+++ b/res/xml/dashboard_categories.xml
@@ -69,14 +69,19 @@
                 android:fragment="com.android.settings.WirelessSettings"
                 android:icon="@drawable/ic_settings_more"
                 />
+        </dashboard-category>
 
-    </dashboard-category>
+        <!-- PERSONALIZATION -->
+        <dashboard-category
+            android:id="@+id/personalization_section"
+            android:title="@string/header_category_personalization" >
 
+        <!-- Interface -->
         <dashboard-tile
-                android:id="@+id/button_settings"
-                android:title="@string/button_pref_title"
-                android:fragment="com.android.settings.ButtonSettings"
-                android:icon="@drawable/ic_buttons_tile"
+                android:id="@+id/interface_settings"
+                android:icon="@drawable/ic_teslacoil"
+                android:fragment="com.android.settings.tesla.InterfaceSettings"
+                android:title="@string/interface_settings_title"
                 />
 
 	<!-- Layers -->
@@ -90,6 +95,8 @@
                 android:targetClass="com.lovejoy777.rroandlayersmanager.menu" />
         </dashboard-tile>
 
+        </dashboard-category>
+
     <!-- DEVICE -->
     <dashboard-category
             android:id="@+id/device_section"
@@ -102,6 +109,13 @@
                 android:title="@string/home_settings"
                 android:fragment="com.android.settings.HomeSettings"
                 android:icon="@drawable/ic_settings_home"
+                />
+
+        <dashboard-tile
+                android:id="@+id/button_settings"
+                android:title="@string/button_pref_title"
+                android:fragment="com.android.settings.ButtonSettings"
+                android:icon="@drawable/ic_buttons_tile"
                 />
 
         <!-- Display -->
