Add reboot menu [2/2]

--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -24,4 +24,9 @@
         android:fragment="com.android.settings.tesla.StatusBar"
         android:title="@string/status_bar_title" />
 
+    <Preference
+        android:key="powermenu"
+        android:fragment="com.android.settings.tesla.PowerMenu"
+        android:title="@string/powermenu_category" />
+
 </PreferenceScreen>
