--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -28,6 +28,9 @@
     <string name="interface_settings_title">TeslaCoil</string>
     <string name="header_category_personalization">Personalization</string>
 
+    <!-- TeslaOTA -->
+    <string name="slimota_title">Tesla Updates</string>
+
     <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on color below to apply</string>
