Straighten out the about logo
Added black greyscale pngs
make it tintable with theme

--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -26,7 +26,7 @@
                 style="?android:preferenceInformationStyle"
                 android:title="@string/tesla_version_title"
                 android:summary="@string/tesla_version_default"
-		android:icon="@drawable/ic_teslacoil" />
+		android:icon="@drawable/ic_tesla_about" />
 
         <PreferenceScreen
                android:key="about_tesla"
