--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -25,8 +25,13 @@
     <string name="choose_app">Choose application</string>
     <string name="reset_message">Reset all entries to default?</string>
     <string name="additional_options_title">Additional options</string>
+
+    <!-- TeslaCoil -->
     <string name="interface_settings_title">TeslaCoil</string>
     <string name="header_category_personalization">Personalization</string>
+    <string name="lockscreen_title">Lock screen</string>
+    <string name="navigation_screen_title">Navigation</string>
+
 
     <!-- TeslaOTA -->
     <string name="slimota_title">Tesla Updates</string>
