Move SystemUI Turner to TeslaCoil Squashed
https://github.com/DirtyUnicorns/android_packages_apps_DU-Tweaks/commit/07d07ef39f7d23e00f1f228b90d4f9d5d0a67d37
https://github.com/DirtyUnicorns/android_packages_apps_DU-Tweaks/commit/9163cee5ab27e92ccceb036d457c1d3c0d807853

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -32,6 +32,10 @@
     <string name="lockscreen_title">Lock screen</string>
     <string name="navigation_screen_title">Navigation</string>
 
+    <!-- SystemUI Tuner Parts -->
+    <string name="systemui_tuner_statusbar_title">Statusbar Items</string>
+    <string name="systemui_tuner_qs_title">Quick Settings</string>
+    <string name="systemuituner">System UI Tuner</string>
 
     <!-- TeslaOTA -->
     <string name="slimota_title">Tesla Updates</string>
