--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -30,4 +30,22 @@
 
     </PreferenceCategory>
 
+         <PreferenceScreen
+            android:key="systemui_tuner_qs"
+            android:title="@string/systemui_tuner_qs_title" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.QsActivity" />
+         </PreferenceScreen>
+
+         <PreferenceScreen
+            android:key="systemui_tuner_statusbar"
+            android:title="@string/systemui_tuner_statusbar_title" >
+            <intent
+                android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.TunerActivity" />
+         </PreferenceScreen>
+
 </PreferenceScreen>
