Toast icon switch [2/2]
Tesla: Added a various section for things misc

--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -37,4 +37,9 @@
         android:fragment="com.android.settings.tesla.PowerMenu"
         android:title="@string/powermenu_category" />
 
+    <Preference
+        android:key="varioustoys"
+        android:fragment="com.android.settings.tesla.VariousToys"
+        android:title="@string/varioustoys" />
+
 </PreferenceScreen>
