--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -31,11 +31,16 @@
     <string name="header_category_personalization">Personalization</string>
     <string name="lockscreen_title">Lock screen</string>
     <string name="navigation_screen_title">Navigation</string>
+    <string name="various_toys">Various Toys</string>
 
     <!-- SystemUI Tuner Parts -->
     <string name="systemui_tuner_statusbar_title">Statusbar Items</string>
     <string name="systemui_tuner_qs_title">Quick Settings</string>
     <string name="systemuituner">System UI Tuner</string>
+
+    <!-- Toast Icons -->
+    <string name="toast_icon_title">Toast icon</string>
+    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
 
     <!-- TeslaOTA -->
     <string name="slimota_title">Tesla Updates</string>
