Add quick-settings pull down with one finger [2/2]

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -30,14 +30,10 @@
 
     </PreferenceCategory>
 
-         <PreferenceScreen
-            android:key="systemui_tuner_qs"
-            android:title="@string/systemui_tuner_qs_title" >
-            <intent
-                android:action="android.intent.action.MAIN"
-                android:targetPackage="com.android.systemui"
-                android:targetClass="com.android.systemui.tuner.QsActivity" />
-         </PreferenceScreen>
+         <Preference
+            android:key="quicksettings"
+            android:fragment="com.android.settings.tesla.QuickSettings"
+            android:title="@string/quicksettings_category" />
 
          <PreferenceScreen
             android:key="systemui_tuner_statusbar"
