--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -264,4 +264,11 @@
     <!-- About Tesla -->
     <string name="tesla_menu_about">About Tesla</string>
 
+    <!-- Status bar quick qs pulldown -->
+    <string name="title_quick_pulldown">Quick pulldown</string>
+    <string name="summary_quick_pulldown">%1$s edge of the status bar pulls down Quick Settings</string>
+    <string name="quick_pulldown_off">Off</string>
+    <string name="quick_pulldown_left">Left</string>
+    <string name="quick_pulldown_right">Right</string>
+
 </resources>
