--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -40,6 +40,6 @@
     <Preference
         android:key="varioustoys"
         android:fragment="com.android.settings.tesla.VariousToys"
-        android:title="@string/varioustoys" />
+        android:title="@string/various_toys" />
 
 </PreferenceScreen>
