Bringup expanded desktop and implement per-user configuration

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -29,10 +29,12 @@
     <!-- TeslaCoil -->
     <string name="interface_settings_title">TeslaCoil</string>
     <string name="header_category_personalization">Personalization</string>
+    <string name="system_title">General</string>
     <string name="lockscreen_title">Lock screen</string>
     <string name="navigation_screen_title">Navigation</string>
     <string name="various_toys">Various Toys</string>
     <string name="quicksettings_category">Quick Settings</string>
+    <string name="expanded_desktop_category">Expanded Desktop</string>
 
     <!-- SystemUI Tuner Parts -->
     <string name="systemui_tuner_statusbar_title">Statusbar Items</string>
@@ -271,5 +273,15 @@
     <string name="quick_pulldown_off">Off</string>
     <string name="quick_pulldown_left">Left</string>
     <string name="quick_pulldown_right">Right</string>
+
+    <!-- Expanded desktop -->
+    <string name="expanded_hide_nothing">Hide nothing</string>
+    <string name="expanded_hide_status">Hide status bar</string>
+    <string name="expanded_hide_navigation">Hide navigation bar</string>
+    <string name="expanded_hide_both">Hide both</string>
+    <string name="expanded_nothing_to_show">To add a custom per-app configuration for expanded state, set "Enabled for all" to the off position</string>
+    <string name="expanded_desktop_state">Expanded state</string>
+    <string name="expanded_enabled_for_all">Enabled for all</string>
+    <string name="expanded_user_configurable">User configurable</string>
 
 </resources>
