--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -19,6 +19,11 @@
     android:title="@string/interface_settings_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+     <Preference
+        android:key="generalsettings"
+        android:fragment="com.android.settings.tesla.GeneralSettings"
+        android:title="@string/system_title" />
+
     <PreferenceScreen
         android:key="status_bar"
         android:fragment="com.android.settings.tesla.StatusBar"
