Force Expanded Notifications [2/2]

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -35,6 +35,7 @@
     <string name="various_toys">Various Toys</string>
     <string name="quicksettings_category">Quick Settings</string>
     <string name="expanded_desktop_category">Expanded Desktop</string>
+    <string name="statusbar_notifications_category">Notifications</string>
 
     <!-- SystemUI Tuner Parts -->
     <string name="systemui_tuner_statusbar_title">Statusbar Items</string>
@@ -287,5 +288,9 @@
     <!-- Quick Settings brightness slider -->
     <string name="qs_brightness_slider_title">Brightness slider</string>
     <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
+
+    <!-- Force expanded notifications -->
+    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
+    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
 
 </resources>
