--- a/res/xml/varioustoys.xml
+++ b/res/xml/varioustoys.xml
@@ -23,5 +23,11 @@
             android:summary="@string/toast_icon_summary"
             android:defaultValue="false" />
 
+        <com.android.settings.tesla.SystemSettingSwitchPreference
+            android:key="disable_fc_notifications"
+            android:title="@string/disable_fc_notifications_title"
+            android:summary="@string/disable_fc_notifications_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
 
