--- a/res/xml/varioustoys.xml
+++ b/res/xml/varioustoys.xml
@@ -36,10 +36,16 @@
             android:defaultValue="false" />
 
         <com.android.settings.tesla.SystemSettingSwitchPreference
-                android:key="double_tap_sleep_navbar"
-                android:title="@string/double_tap_sleep_nav_bar_title"
-                android:summary="@string/double_tap_sleep_nav_bar_summary"
-                android:defaultValue="false" />
+            android:key="double_tap_sleep_navbar"
+            android:title="@string/double_tap_sleep_nav_bar_title"
+            android:summary="@string/double_tap_sleep_nav_bar_summary"
+            android:defaultValue="false" />
+
+        <com.android.settings.tesla.SystemSettingSwitchPreference
+            android:key="double_tap_sleep_lock_screen"
+            android:title="@string/double_tap_to_sleep_lockscreen_title"
+            android:summary="@string/double_tap_to_sleep_lockscreen_summary"
+            android:defaultValue="false" />
 
 </PreferenceScreen>
 
