Battery settings PS5: More configuration PS7: Rebased and changed topic
Squashed:
Author: EnderBlue
Forward port battery icon option [2/2]
CyanogenMod/android_packages_apps_Settings@ba62228

Author: mikeNG
Cleanup battery style code
CyanogenMod/android_packages_apps_Settings@0a10a1a

Author: ezio84
Battery style: fix dynamic percentage setting
CyanogenMod/android_packages_apps_Settings@31dbb48

Author: LorDClockaN
Settings: Dotted circle battery (2/2)
AICP/packages_apps_Settings@2c1692a

Change-Id: I4ee5884404515d1177554c37c6699eb5c053c632

--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -19,16 +19,15 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/status_bar_title">
 
-    <!-- Status bar tweaks -->
-    <PreferenceCategory
-        android:title="@string/status_bar_style_title">
-
         <PreferenceScreen
             android:fragment="com.android.settings.tesla.StatusBarClockStyle"
             android:key="clock_style_pref"
             android:title="@string/status_bar_clock" />
 
-    </PreferenceCategory>
+         <Preference
+            android:key="battery"
+            android:fragment="com.android.settings.tesla.Battery"
+            android:title="@string/battery_category" />
 
          <Preference
             android:key="quicksettings"
