--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -54,4 +54,9 @@
             android:fragment="com.android.settings.tesla.StatusbarNotifications"
             android:title="@string/statusbar_notifications_category" />
 
+         <com.android.settings.tesla.SystemSettingSwitchPreference
+            android:key="status_bar_custom_header"
+            android:title="@string/status_bar_custom_header_title"
+            android:summary="@string/status_bar_custom_header_summary"
+            android:defaultValue="false"/>
 </PreferenceScreen>
