--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -43,6 +43,11 @@
         android:title="@string/powermenu_category" />
 
     <Preference
+        android:key="recents"
+        android:fragment="com.android.settings.tesla.Recents"
+        android:title="@string/recents_category" />
+
+    <Preference
         android:key="varioustoys"
         android:fragment="com.android.settings.tesla.VariousToys"
         android:title="@string/various_toys" />
