--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -185,6 +185,7 @@
     <string name="notification_light_missed_call_title">Missed call</string>
     <string name="notification_light_voicemail_title">Voicemail</string>
     <string name="notification_light_screen_on">Lights with screen on</string>
+    <string name="allow_lights_title">Lights in do not disturb mode</string>
 
     <string name="profiles_add">Add</string>
     <string name="profile_choose_app">Choose app</string>
