--- a/res/xml/notification_settings.xml
+++ b/res/xml/notification_settings.xml
@@ -96,7 +96,13 @@
         android:key="notification"
         android:title="@string/notification_section_header" >
 
-        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
+         <com.android.settings.tesla.SystemSettingSwitchPreference
+                android:key="headset_plugged_in"
+                android:title="@string/headset_plugged_in_title"
+                android:summary="@string/headset_plugged_in_summary"
+                android:defaultValue="false" />
+
+        <com.android.settings.tesla.SystemSettingSwitchPreference
                 android:key="zen_disable_ducking_during_media_playback"
                 android:title="@string/interruptions_ignore_while_media_title"
                 android:summary="@string/interruptions_ignore_while_media_summary"
