--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -480,4 +480,8 @@
     <string name="headset_plugged_in_title">Headset Plugged In notification</string>
     <string name="headset_plugged_in_summary">Enable notification for when the headset is plugged in</string>
 
+    <!-- Wake on Plug -->
+    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
+    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
+
 </resources>
