--- a/res/xml/varioustoys.xml
+++ b/res/xml/varioustoys.xml
@@ -34,6 +34,13 @@
             android:summary="@string/disable_fc_notifications_summary"
             android:defaultValue="false" />
 
+        <ListPreference
+            android:key="media_scanner_on_boot"
+            android:title="@string/media_scanner_on_boot_title"
+            android:entries="@array/media_scanner_on_boot_entries"
+            android:entryValues="@array/media_scanner_on_boot_values"
+            android:persistent="false" />
+
         <com.android.settings.tesla.SystemSettingSwitchPreference
             android:key="double_tap_sleep_gesture"
             android:title="@string/double_tap_to_sleep_title"
