--- a/res/xml/varioustoys.xml
+++ b/res/xml/varioustoys.xml
@@ -59,5 +59,13 @@
             android:summary="@string/double_tap_to_sleep_lockscreen_summary"
             android:defaultValue="false" />
 
+        <ListPreference
+            android:key="pref_scrollingcache"
+            android:dialogTitle="@string/pref_scrollingcache_title"
+            android:title="@string/pref_scrollingcache_title"
+            android:summary="@string/pref_scrollingcache_summary"
+            android:entries="@array/entries_scrollingcache"
+            android:entryValues="@array/values_scrollingcache" />
+
 </PreferenceScreen>
 
