--- a/res/xml/general.xml
+++ b/res/xml/general.xml
@@ -27,4 +27,9 @@
             android:fragment="com.android.settings.tesla.ExpandedDesktop"
             android:title="@string/expanded_desktop_category" />
 
+         <PreferenceScreen
+            android:key="density_changer"
+            android:title="@string/lcd_density_title"
+            android:fragment="com.android.settings.tesla.Density" />
+
 </PreferenceScreen>
