--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -5,4 +5,7 @@
     <color name="switchbar_background_color">#ff242424</color>
     <color name="theme_accent">#ff33b5e5</color>
 
+    <!-- Gesture Anywhere -->
+    <color name="ga_gesture_color">@android:color/holo_blue_light</color>
+
 </resources>
