--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -109,4 +109,8 @@
     <drawable name="expanded_item_bg">@android:color/background_light</drawable>
     <color name="expanded_button_color_normal">#4CAF50</color>
     <color name="expanded_button_color_close">#F44336</color>
+
+    <!-- Gesture Anywhere -->
+    <color name="ga_gesture_color">#009688</color>
+
 </resources>
