Lockscreen weather options [2/2] Adapted for Tesla with a lot of changes to include
- Created switch for extended statusbar weather
- Mapped LockClock settings because creating a widget to just to this is stupid
- Made use of what we had and removed redundant crap
- Checkboxes are ugly, who's idea was that? Also "weather informations" hahaha
- Added dependencies because it makes sense
- Cleaned up the code some what

- Moved to it's own category on coil since it has multiple settings
Change-Id: I186413598dd643ba2d7c79c248e75b2f39dfc658

--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -52,4 +52,9 @@
         android:fragment="com.android.settings.tesla.VariousToys"
         android:title="@string/various_toys" />
 
+    <Preference
+        android:key="weather"
+        android:fragment="com.android.settings.tesla.Weather"
+        android:title="@string/weather_category" />
+
 </PreferenceScreen>
