--- a/res/xml/tesla_interface_settings.xml
+++ b/res/xml/tesla_interface_settings.xml
@@ -31,6 +31,7 @@
 
     <PreferenceScreen
         android:key="navigation_general_category"
+        android:fragment="com.android.settings.tesla.NavigationSettings"
         android:title="@string/navigation_screen_title" />
 
     <PreferenceScreen
