--- a/res/xml/navigation_settings.xml
+++ b/res/xml/navigation_settings.xml
@@ -26,4 +26,41 @@
             android:summary="@string/double_tap_sleep_nav_bar_summary"
             android:defaultValue="false" />
 
+        <SwitchPreference
+            android:key="dim_nav_buttons"
+            android:title="@string/dim_nav_buttons_title"
+            android:dependency="navigation_bar_show"
+            android:summary="@string/dim_nav_buttons_summary" />
+
+        <SwitchPreference
+            android:key="dim_nav_buttons_touch_anywhere"
+            android:dependency="dim_nav_buttons"
+            android:title="@string/dim_nav_buttons_touch_anywhere_title"
+            android:summaryOn="@string/dim_nav_buttons_touch_anywhere_summary_on"
+            android:summaryOff="@string/dim_nav_buttons_touch_anywhere_summary_off" />
+
+        <SlimSeekBarPreference
+            android:key="dim_nav_buttons_timeout"
+            android:dependency="dim_nav_buttons"
+            android:title="@string/dim_nav_buttons_timeout_title"
+            android:summary="@string/dim_nav_buttons_timeout_summary" />
+
+        <SlimSeekBarPreference
+            android:key="dim_nav_buttons_alpha"
+            android:dependency="dim_nav_buttons"
+            android:title="@string/dim_nav_buttons_alpha_title"
+            android:summary="@string/dim_nav_buttons_alpha_summary" />
+
+        <SwitchPreference
+            android:key="dim_nav_buttons_animate"
+            android:dependency="dim_nav_buttons"
+            android:title="@string/dim_nav_buttons_animate_title"
+            android:summary="@string/dim_nav_buttons_animate_summary" />
+
+        <SlimSeekBarPreference
+            android:key="dim_nav_buttons_animate_duration"
+            android:dependency="dim_nav_buttons_animate"
+            android:title="@string/dim_nav_buttons_animate_duration_title"
+            android:summary="@string/dim_nav_buttons_animate_duration_summary" />
+
 </PreferenceScreen>
