Navigation bar button color [2/2]

--- a/res/values/tesla_strings.xml
+++ b/res/values/tesla_strings.xml
@@ -98,6 +98,9 @@
     <string name="dim_nav_buttons_touch_anywhere_summary_on">Touching anywhere on the screen will cause buttons to un-dim</string>
     <string name="dim_nav_buttons_touch_anywhere_summary_off">Only touches on the navbar will cause buttons to un-dim</string>
 
+    <!-- Navigation bar button color -->
+    <string name="navbar_button_tint_title">Button color</string>
+
     <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
     <string name="press_color_to_apply">Press on color below to apply</string>
