--- a/res/xml/navigation_settings.xml
+++ b/res/xml/navigation_settings.xml
@@ -20,6 +20,12 @@
             android:title="@string/navbar_dimen_title"
             android:dependency="navigation_bar_show" />
 
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="navigation_bar_tint"
+            android:title="@string/navbar_button_tint_title"
+            android:defaultValue="0xffffff"
+            android:dependency="navigation_bar_show" />
+
        <com.android.settings.tesla.SystemSettingSwitchPreference
             android:key="double_tap_sleep_navbar"
             android:title="@string/double_tap_sleep_nav_bar_title"
