Yo don't forget about me peeps ;)

--- a/res/xml/tesla_about.xml
+++ b/res/xml/tesla_about.xml
@@ -72,6 +72,10 @@
 	    <Preference
 	        android:title="Alex Couderc (Alx31)"
 	            android:summary="Sony Xperia maintainer" />
-	            	            
+	            
+	    <Preference
+  	        android:title="Anik khan (Anik1199)"
+  	            android:summary="Android One maintainer/developer" />
+  	            
 	    </PreferenceCategory>       
 </PreferenceScreen>
